Sat Jun 19 05:40:07 1999  Philip Blundell <pb@nexus.co.uk>

	* arm.c (arm_reload_in_hi): Invert sense of test on BYTES_BIG_ENDIAN.

Sat Jun 19 05:25:05 1999  Richard Earnshaw (rearnsha@arm.com)

	* arm.h (CONDITIONAL_REGISTER_USAGE): If flag_pic, never use
	PIC_OFFSET_TABLE_REGNUM for general alloaction.
	(INITIAL_ELIMINATION_OFFSET): Count the fact that the PIC register
	must be stacked if it is used for PIC accesses.
	* arm.c (use_return_insn): Handle PIC register specially.
	(output_return_instruction): Likewise.
	(output_func_{prologue,epilogue}): Likewise.
	(output_expand_prologue): Likewise.

	* arm.c (arm_override_options): Remove warning about PIC code
	not being supported.

Fri Jun 18 15:44:18 1999  Richard Henderson  <rth@cygnus.com>

	* alpha.c (alpha_expand_block_move): Use get_insns rather than
	gen_sequence as argument to emit_no_conflict_block.

Fri Jun 18 06:48:30 1999  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* fixinc/inclhack.def (ioctl_fix_ctrl): Fix the definition of _*ISCTRL().
	* fixinc/{fixincl.x,inclhack.sh}: regen

Thu Jun 17 13:28:30 1999  David O'Brien <obrien@FreeBSD.org>

	* i386/freebsd-elf.h (LINK_SPEC): Fix typo.

	* i386/freebsd-elf.h (FUNCTION_PROFILER): labels are not needed and
	the reference to `mcount' was not correct for the ELF on FreeBSD.

Thu Jun 17 02:54:30 1999  Jeffrey A Law  (law@cygnus.com)

	* invoke.texi (ia32 options): Fix typo.

	* emit-rtl.c (operand_subword): Tighten checks for when it is safe
	to safe to extract a subword out of a REG.

Wed Jun 16 10:33:02 1999  Jason Merrill  <jason@yorick.cygnus.com>

	* dwarfout.c (add_incomplete_type): New fn.
	(output_type): Call it.
	(retry_incomplete_types): New fn.
	(dwarfout_finish): Call it.

	From Eric Raskin <ehr@listworks.com>:
	(output_type): Output types for bases.

Tue Jun 15 01:55:20 1999  David O'Brien <obrien@FreeBSD.org>

	* i386/freebsd-elf.h (LINK_SPEC): clean up the linking library
	specifications and make it realistic.
	(LIB_SPEC): Likewise.
